# rust_todo

./: .env.example  .hadolint.yaml  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml  dockerfile  request.http  rust-toolchain.toml  sample.http
.github/workflows/: dockerfile-format.yml  dockerfile-lint.yml  rust-format.yml
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  repositories.rs
db_config/: init.sql
frontend/: Cargo.toml  Trunk.toml  index.html  package.json
frontend/assets/: initializer.mjs
frontend/public/: invoke.js
frontend/src/: app.rs  component.rs  http_client.rs  main.rs  props.rs  utils.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  migrated.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: http_client.rs  lib.rs  main.rs
frontend/src/app/component/: task_input_form.rs
frontend/src/app/component_property/: task_input_form_props.rs
frontend/src/component/: accordion_layout.rs  binary_choice.rs  form_layout.rs  single_button.rs  task_input_form.rs  text_input_field.rs  text_input_form.rs  todo_list.rs
frontend/src/props/: accordion_layout_props.rs  binary_choice_props.rs  form_layout_props.rs  single_button_props.rs  task_input_form_props.rs  text_input_field_props.rs  todo_list_props.rs
frontend/src/utils/: js_bind.rs  request_struct.rs  wasm.rs
frontend/src/utils/request/: get.rs  patch.rs  post.rs
migrations/: 20240701141208_init.sql
rust-todo-backend/src/: main.rs
rust-todo-frontend/: Cargo.toml  Trunk.toml
rust-todo-frontend/src/: app.rs  main.rs
rust-todo-frontend/src-tauri/: Cargo.toml  tauri.conf.json
rust-todo-frontend/src/app/: component.rs
rust-todo-frontend/src/app/component/: task_input_form.rs
shared_struct/: Cargo.toml
shared_struct/src/: lib.rs  todo.rs
shared_struct/src/todo/: error.rs  mount.rs  repository.rs
shared_struct/src/todo/mount/: object.rs
shared_struct/src/todo/mount/object/: create_todo.rs  todo.rs  update_todo.rs
shared_struct/src/todo/mount/repository/: common.rs  todo.rs
src/: handlers.rs  main.rs  repositories.rs
