[workspace]
members = [
    "rust-todo-backend",
    "rust-todo-frontend"
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
http-body = "1.0.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = "0.1.5"
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls","any","postgres"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }