[workspace]
members = [
    "backend",
    "frontend",
    "shared_struct"
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
dotenv = "0.15.0"
http-body = "1.0.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = "0.1.5"
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls","any","postgres"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tauri = { version = "1.7.1" , features = ["shell-open","http-request"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys" }
validator = { version = "0.18.1", features = ["derive"] }
yew = { version = "0.21" , features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
patternfly-yew = "0.6.2"
