[package]
name = "rust-todo-frontend-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
rust-todo-frontend = { path = "./src-tauri" }
patternfly-yew = { workspace = true }
shared_struct = { workspace = true }
reqwest = { workspace = true }
gloo = { workspace = true }
log = { workspace = true }
console_log = { workspace = true }
